fix(PR-290): bubble input is visible, even if bubbles overlap

--- a/src/app/sliders/horizontal-slider/horizontal-slider.component.css
+++ b/src/app/sliders/horizontal-slider/horizontal-slider.component.css
@@ -47,12 +47,14 @@ span {
 }
 
 .bubble-input {
+    z-index: 2;
     width: 40px;
     background: #e10072;
     transform: translate(-50%, 0);
 }
 
 .bubble-span {
+    z-index: 1;
     background: #e10072;
     transform: translate(-50%, 0);
 }
